--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "electron": "^27.1.3",
-    "x_ite": "^8.12.5"
+    "electron": "^28.0.0"
   }
 }
